--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/h1bomb/domainChecker#readme",
   "dependencies": {
+    "bluebird": "^2.9.34",
     "nedb": "^1.1.3",
     "request": "^2.60.0"
   }
