--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bluebird": "^2.9.34",
     "nedb": "^1.1.3",
-    "request": "^2.60.0"
+    "request": "^2.60.0",
+    "commander": "^2.8.1"
   }
 }
